--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:GjXosriTvriASb/6TXILTjeLtBrvQMjZMKwW78ZS8B4=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
@@ -22,11 +22,15 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=pgsql
-DB_HOST=127.0.0.1
+DB_HOST=host.docker.internal
 DB_PORT=5432
 DB_DATABASE=spa_intentions
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=spa
+DB_PASSWORD=spa
+DB_SCHEMA=spa
+DB_PREFIX=spa_
+
+COORD_PIN="46348"
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
