--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "vite": "^5.0"
     },
     "dependencies": {
-        "alpinejs": "^3.14.3"
+        "alpinejs": "^3.14.3",
+        "flowbite": "^2.5.2"
     }
 }
