--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   spa_postgres:
-    container_name: spa
+    container_name: spa_db
     image: postgres:15-alpine
     ports:
       - '5432:5432'
@@ -14,6 +14,13 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    environment:
+      - DB_CONNECTION=pgsql
+      - DB_HOST=localhost
+      - DB_PORT=5432
+      - DB_DATABASE=spa_intentions
+      - DB_USERNAME=spa
+      - DB_PASSWORD=spa
     ports:
       - '8000:8000'
       - '5173:5173'
@@ -21,18 +28,8 @@ services:
       - .:/var/www/html
     depends_on:
       - spa_postgres
-  vite:
-    container_name: vite
-    build:
-      context: .
-      dockerfile: Dockerfile
-    working_dir: /var/www/html
-    volumes:
-      - .:/var/www/html
-    ports:
-      - '5174:5173'
-    command: ["npm", "run", "dev"]
-    depends_on:
-      - spa_app
+    container_name: spa_web
+    # command: 'bash -c "composer update"'
+    # command: "bash -c 'composer install'"
 volumes:
   spa_intentions:
